[package]
name = "rust-test"
version = "0.1.0"
authors = ["shohei_yasutake"]

[dependencies]
hex-literal = "0.1.1"
ring = "0.13.2"
rust-crypto = "0.2.36"
aes-ctr = "0.1.0"
rand = "0.5.5"
webpki = "0.18.1"

[dependencies.rustls]
git = "git://github.com/amutake/rustls.git"
branch = "quic-14"
features = ["quic"]
