[package]
name = "shinchoquic"
version = "0.1.0"
authors = ["amutake"]

[dependencies]
hex-literal = "0.1.1"
ring = "0.13.2"
rust-crypto = "0.2.36"
aes-ctr = "0.1.0"
rand = "0.5.5"
webpki = "0.18.1"
webpki-roots = "0.15.0"
byteorder = "1.2.6"
untrusted = "0.6.2"

[dependencies.rustls]
git = "git://github.com/amutake/rustls.git"
branch = "quic-14"
features = ["quic"]
